--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "botkit": "0.2.2",
+    "botkit": "^0.6.18",
     "dotenv": "^6.0.0"
   }
 }
